added explosion after bat touches player and damages him

--- a/src/gameConfig.json
+++ b/src/gameConfig.json
@@ -10,7 +10,8 @@
     "width": 50,
     "projectileSpeed": 10,
     "projectileRange": 450,
-    "speed": 4
+    "speed": 4,
+    "health": 2
   },
   "bat": {
     "health": 1,
