added Npcs to new folder, refactor of random spawn points of npcs (every npc has its own), first prototype of Turret npc

--- a/src/gameConfig.json
+++ b/src/gameConfig.json
@@ -21,6 +21,10 @@
   },
   "spawner": {
     "spawnInterval": 2000,
-    "spawnCount": 2
+    "spawnCount": 1
+  },
+  "turret": {
+    "fireRate": 1,
+    "health": 1
   }
 }
